log
Fri, Apr 18, 2025  8:33:50 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sun, Apr 20, 2025  2:54:44 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
6816a54
Sun, Apr 20, 2025  2:55:20 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26af63c
Sun, Apr 20, 2025  2:56:32 PM: 
 tests:  0|0
088516b
Sun, Apr 20, 2025  2:58:07 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:5: error: 'mpa' undeclared (first use in this function)
     mpa->size = 0;
     ^~~
hashmap.c:58:5: note: each undeclared identifier is reported only once for each function it appears in
f86d054
Sun, Apr 20, 2025  2:58:38 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a78790c
Sun, Apr 20, 2025  3:11:40 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  5|4
total_score: 30/70
5a041d5
Sun, Apr 20, 2025  3:15:46 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
40d91e6
Sun, Apr 20, 2025  3:21:10 PM: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|2
total_score: 50/70
03ed2d0
Sun, Apr 20, 2025  3:30:48 PM: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  13|2
total_score: 50/70
e7036c5
